--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <button>click here</button>
+    <ul>
+        <li>Список 1</li>
+        <li>Список 2</li>
+        <li>Список 3</li>
+    </ul>
 </body>
 </html>
