--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <li>Список 2</li>
         <li>Список 3</li>
     </ul>
+    <div class="text">
+        <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam beatae placeat nisi non reiciendis iusto qui obcaecati atque at porro minima similique cumque suscipit, cupiditate, esse rem cum dolore! Doloremque?
+        </p>
+    </div>
 </body>
 </html>
